# agent_factory

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  WORKBENCH.md  __init__.py  config.py  docker-compose.yml  main.py  pyproject.toml  run_context.py  types.py
.agent_state/: README.md  repo_index.json
.github/workflows/: ci.yml
agent_ext/: __init__.py  run_context.py
agent_ext/agent/: README.md  __init__.py  agent.py  base.py  memory_adapter.py
agent_ext/backends/: README.md  __init__.py  base.py  composite.py  console.py  hashline.py  local_fs.py  permissions.py  sandbox_exec.py  state.py
agent_ext/cog/: __main__.py  daemon.py  loop_v2.py  modes.py  scoring.py  state.py  strategy_bank.py  triggers.py
agent_ext/database/: README.md  __init__.py  postgres.py  protocol.py  sqlite.py  toolset.py  types.py
agent_ext/docs/: architecture.md  evidence.md  integration.md  skill_athoring.md
agent_ext/evidence/: citations.py  models.py
agent_ext/examples/: ocr_with_agent_demo.py  starter_subagent.py
agent_ext/export/: __init__.py  base.py  docx_writer.py  html_writer.py  models.py  pdf_writer.py  pptx_writer.py
agent_ext/hooks/: README.md  __init__.py  async_guardrail.py  base.py  builtins.py  chain.py  context.py  cost_tracking.py  decorators.py  exceptions.py  parallel.py  permissions.py  strategies.py
agent_ext/ingest/: citations.py  docx_parser.py  extractors.py  llm_ocr_engine.py  models.py  multi_extractor.py  ocr_engines.py  pdf2image_renderer.py  pdf_to_images.py  pipeline.py  retry_planner.py  validation.py  validation_evidence.py
agent_ext/mcp/: __init__.py  client.py  registry.py  server.py  transport.py  types.py
agent_ext/memory/: README.md  __init__.py  base.py  cutoff.py  processor.py  summarize.py  window.py
agent_ext/modules/: __init__.py  loader.py  registry.py  spec.py
agent_ext/modules/builtins/core/: module.py
agent_ext/modules/builtins/self_improve/: module.py
agent_ext/modules/builtins/workflow/: module.py
agent_ext/research/: __init__.py  controller.py  evidence_graph.py  executor.py  executor_parallel.py  gap_analysis.py  handlers_default.py  ledger.py  models.py  planner.py  synth.py
agent_ext/rlm/: README.md  __init__.py  logging.py  models.py  policies.py  prompts.py  python_runner.py  repl.py  toolset.py
agent_ext/search/: __init__.py  bm25.py  index.py  store.py  tokenize.py
agent_ext/self_improve/: controller.py  gates.py  models.py  patching.py  triggers.py
agent_ext/skills/: README.md  __init__.py  exceptions.py  loader.py  models.py  pai_toolset.py  registry.py  selector.py  toolset.py
agent_ext/skills/registries/: __init__.py  combined.py  filtered.py  git.py  prefixed.py  renamed.py  wrapper.py
agent_ext/subagents/: README.md  __init__.py  base.py  message_bus.py  orchestrator.py  prompts.py  protocols.py  registry.py  toolset.py  types.py
agent_ext/todo/: __init__.py  events.py  models.py  pai_toolset.py  store_base.py  store_memory.py  store_postgres.py  toolset.py
agent_ext/workbench/: __main__.py  adopt.py  events.py  gitops.py  jupyter.py  limits.py  locks.py  loop.py  models.py  parallel.py  patch_models.py  plan_models.py  planner.py  runtime.py  streaming.py  subagents.py  subagents_bm25.py  subagents_patch.py  tui.py  tui_async.py  worktrees.py  writer_runner.py
agent_ext/workflow/: bandit.py  builtins.py  executor.py  experience.py  planner.py  registry.py  types.py
docker/: Dockerfile
docs/: AUTO_AGENT.md
evals/: search_evals.py
evals/cases/: search.jsonl
tests/: test_audit_gaps.py  test_backends_new.py  test_database.py  test_hooks.py  test_memory_new.py  test_patching.py  test_planner.py  test_rlm.py  test_scoring.py  test_skills_new.py  test_subagents.py  test_toolsets.py  test_worktrees.py
