[project]
name = "agent-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "pdf2img>=0.1.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "rich>=14.3.2",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
    "pydantic-ai>=1.60.0",
]